<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.cast.AboutFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/standart"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standart">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birtday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/birtday" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standart">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birtday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="22" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/standart">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standart">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/place_of_birth"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPlaceOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/place_of_birth" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standart">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Acting" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standart">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/also_known_as"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvKnownAs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/full_names" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDeathDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standart"
                    android:visibility="gone">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deathday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDeathDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/date/ddmmyy" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/standart"
                android:paddingTop="@dimen/standart"
                android:text="@string/biography"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <TextView
                android:id="@+id/tvBiography"
                android:paddingHorizontal="@dimen/standart"
                tools:text="@tools:sample/lorem/random"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>